@@ -14,7 +14,7 @@ export DH_OPTIONS
 install_libbde:
 	# Set up libbde package directories and files
 	mkdir -p debian/libbde/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so.* debian/libbde/usr/lib
+	install -p -m755 debian/tmp/usr/lib/lib*.so.*.*.* debian/libbde/usr/lib
 
 install_libbde_dev:
 	# Set up libbde-dev package directories and files
